welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:6: error: '=' expected but ';' found.
	for(i <- 0 to nums.length-1)
^